; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_lupdate.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_lupdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.boxstm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lupdate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lupdate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.boxstm*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i8* @lua_touserdata(i32* %7, i32 1)
  %9 = bitcast i8* %8 to %struct.boxstm*
  store %struct.boxstm* %9, %struct.boxstm** %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @lua_isuserdata(i32* %10, i32 2)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i8* @lua_touserdata(i32* %14, i32 2)
  store i8* %15, i8** %4, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i64 @luaL_checkinteger(i32* %16, i32 3)
  store i64 %17, i64* %5, align 8
  br label %27

18:                                               ; preds = %1
  %19 = load i32*, i32** %2, align 8
  %20 = call i8* @luaL_checklstring(i32* %19, i32 2, i64* %5)
  store i8* %20, i8** %6, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i8* @skynet_malloc(i64 %21)
  store i8* %22, i8** %4, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @memcpy(i8* %23, i8* %24, i64 %25)
  br label %27

27:                                               ; preds = %18, %13
  %28 = load %struct.boxstm*, %struct.boxstm** %3, align 8
  %29 = getelementptr inbounds %struct.boxstm, %struct.boxstm* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i8*, i8** %4, align 8
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @stm_update(i32 %30, i8* %31, i64 %32)
  ret i32 0
}

declare dso_local i8* @lua_touserdata(i32*, i32) #1

declare dso_local i64 @lua_isuserdata(i32*, i32) #1

declare dso_local i64 @luaL_checkinteger(i32*, i32) #1

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i8* @skynet_malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @stm_update(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
